// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileMenu should match snapshot 1`] = `
<div>
  <button
    aria-haspopup="true"
    aria-label="profilikon knapp"
    class="Button-module_button__2ZuB7 Button-module_small__l39oh Button-module_quiet__1KlhF Button-module_primary__s1sM6 Button-module_onlyIcon__lENu3"
    type="button"
  >
    <svg
      aria-label="profilikon"
      class="Button-module_icon__-43u5"
      fill="none"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12ZM12 7.25a2.25 2.25 0 1 0 0 4.5 2.25 2.25 0 0 0 0-4.5ZM8.25 9.5a3.75 3.75 0 1 1 7.5 0 3.75 3.75 0 0 1-7.5 0Zm8.861 8.8a.239.239 0 0 1-.087.245 8.273 8.273 0 0 1-.933.621c-.159.09-.354-.023-.38-.203a3.75 3.75 0 0 0-7.422 0c-.027.18-.221.294-.38.203a8.268 8.268 0 0 1-.933-.621.239.239 0 0 1-.087-.244 5.25 5.25 0 0 1 10.222 0Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`ProfileMenu should match snapshot with logout text 1`] = `
<div>
  <button
    aria-haspopup="true"
    aria-label="profilikon knapp"
    class="Button-module_button__2ZuB7 Button-module_small__l39oh Button-module_quiet__1KlhF Button-module_primary__s1sM6 Button-module_onlyIcon__lENu3"
    type="button"
  >
    <svg
      aria-label="profilikon"
      class="Button-module_icon__-43u5"
      fill="none"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12ZM12 7.25a2.25 2.25 0 1 0 0 4.5 2.25 2.25 0 0 0 0-4.5ZM8.25 9.5a3.75 3.75 0 1 1 7.5 0 3.75 3.75 0 0 1-7.5 0Zm8.861 8.8a.239.239 0 0 1-.087.245 8.273 8.273 0 0 1-.933.621c-.159.09-.354-.023-.38-.203a3.75 3.75 0 0 0-7.422 0c-.027.18-.221.294-.38.203a8.268 8.268 0 0 1-.933-.621.239.239 0 0 1-.087-.244 5.25 5.25 0 0 1 10.222 0Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`ProfileMenu should match snapshot with logout text: 
      <div>
        <button
          aria-label="profilikon knapp"
          class="Button-module_button__2ZuB7 Button-module_small__l39oh Button-module_quiet__1KlhF Button-module_primary__s1sM6 Button-module_onlyIcon__lENu3"
          type="button"
        >
          <svg
            aria-label="profilikon"
            class="Button-module_icon__-43u5"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M3 12a9 9 0 1 1 14.882 6.812 6.002 6.002 0 0 0-11.764 0A8.98 8.98 0 0 1 3 12Zm5 8.064A8.963 8.963 0 0 0 12 21a8.963 8.963 0 0 0 4-.936V20a4 4 0 0 0-8 0v.064ZM12 1C5.925 1 1 5.925 1 12s4.925 11 11 11 11-4.925 11-11S18.075 1 12 1Zm0 10a2 2 0 1 1 0-4 2 2 0 0 1 0 4ZM8 9a4 4 0 1 0 8 0 4 4 0 0 0-8 0Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
     1`] = `
<div>
  <button
    aria-label="profilikon knapp"
    class="Button-module_button__2ZuB7 Button-module_small__l39oh Button-module_quiet__1KlhF Button-module_primary__s1sM6 Button-module_onlyIcon__lENu3"
    type="button"
  >
    <svg
      aria-label="profilikon"
      class="Button-module_icon__-43u5"
      fill="none"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M3 12a9 9 0 1 1 14.882 6.812 6.002 6.002 0 0 0-11.764 0A8.98 8.98 0 0 1 3 12Zm5 8.064A8.963 8.963 0 0 0 12 21a8.963 8.963 0 0 0 4-.936V20a4 4 0 0 0-8 0v.064ZM12 1C5.925 1 1 5.925 1 12s4.925 11 11 11 11-4.925 11-11S18.075 1 12 1Zm0 10a2 2 0 1 1 0-4 2 2 0 0 1 0 4ZM8 9a4 4 0 1 0 8 0 4 4 0 0 0-8 0Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`ProfileMenu should match snapshot: 
      <div>
        <button
          aria-label="profilikon knapp"
          class="Button-module_button__2ZuB7 Button-module_small__l39oh Button-module_quiet__1KlhF Button-module_primary__s1sM6 Button-module_onlyIcon__lENu3"
          type="button"
        >
          <svg
            aria-label="profilikon"
            class="Button-module_icon__-43u5"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M3 12a9 9 0 1 1 14.882 6.812 6.002 6.002 0 0 0-11.764 0A8.98 8.98 0 0 1 3 12Zm5 8.064A8.963 8.963 0 0 0 12 21a8.963 8.963 0 0 0 4-.936V20a4 4 0 0 0-8 0v.064ZM12 1C5.925 1 1 5.925 1 12s4.925 11 11 11 11-4.925 11-11S18.075 1 12 1Zm0 10a2 2 0 1 1 0-4 2 2 0 0 1 0 4ZM8 9a4 4 0 1 0 8 0 4 4 0 0 0-8 0Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
     1`] = `
<div>
  <button
    aria-label="profilikon knapp"
    class="Button-module_button__2ZuB7 Button-module_small__l39oh Button-module_quiet__1KlhF Button-module_primary__s1sM6 Button-module_onlyIcon__lENu3"
    type="button"
  >
    <svg
      aria-label="profilikon"
      class="Button-module_icon__-43u5"
      fill="none"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M3 12a9 9 0 1 1 14.882 6.812 6.002 6.002 0 0 0-11.764 0A8.98 8.98 0 0 1 3 12Zm5 8.064A8.963 8.963 0 0 0 12 21a8.963 8.963 0 0 0 4-.936V20a4 4 0 0 0-8 0v.064ZM12 1C5.925 1 1 5.925 1 12s4.925 11 11 11 11-4.925 11-11S18.075 1 12 1Zm0 10a2 2 0 1 1 0-4 2 2 0 0 1 0 4ZM8 9a4 4 0 1 0 8 0 4 4 0 0 0-8 0Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`ProfileMenu should match with snapshot 1`] = `
<div>
  <div>
    <button
      aria-label="profilikon knapp"
      class="Button-module_button__2ZuB7 Button-module_small__l39oh Button-module_quiet__1KlhF Button-module_primary__s1sM6 Button-module_onlyIcon__lENu3"
      type="button"
    >
      <svg
        aria-label="profilikon"
        class="Button-module_icon__-43u5"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a9 9 0 1 1 14.882 6.812 6.002 6.002 0 0 0-11.764 0A8.98 8.98 0 0 1 3 12Zm5 8.064A8.963 8.963 0 0 0 12 21a8.963 8.963 0 0 0 4-.936V20a4 4 0 0 0-8 0v.064ZM12 1C5.925 1 1 5.925 1 12s4.925 11 11 11 11-4.925 11-11S18.075 1 12 1Zm0 10a2 2 0 1 1 0-4 2 2 0 0 1 0 4ZM8 9a4 4 0 1 0 8 0 4 4 0 0 0-8 0Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</div>
`;
